# NeoSentinel

./: .gitignore  LICENSE  README.md  pyproject.toml  rules.md
.cursor/plans/: neosentinel_v2.0_roadmap_b2da37c5.plan.md
.github/workflows/: ci.yml  docker-e2e.yml  e2e-playwright.yml  frontend-ci.yml  matrix-ci.yml  publish.yml
dashboard-ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
dashboard-ui/e2e/: simulate-flow.spec.ts
dashboard-ui/src/: App.css  App.tsx  index.css
docker/: docker-compose.yml
docker/ray/: ray-head.sh
docker/redis-cluster/: cluster-init.sh  redis.conf
docker/traefik/: traefik.yml
docker/vllm/: Dockerfile  Dockerfile.mock  README.md  mock_server.py
docs/: analysis.md
docs/infra/: aws-3-node-provisioning.md
neosentinel/: engine.py
neosentinel/actions/: __init__.py  adjust_vllm_config.py  arm_performix_analyze.py  base.py  executor.py  rollback_optimization.py  scale_worker_threads.py  send_alert.py  trigger_requantize.py
neosentinel/agent/: brain.py  decision_tree.py  loop.py  snapshot.py  synthetic.py  tuning.py
neosentinel/audit/: __init__.py  checkpoints.py  gitops.py  rollback.py
neosentinel/cli/: __init__.py  config.py  daemons.py  diagnostics.py  main.py  provision.py
neosentinel/contracts/: __init__.py  decision.py  openapi.yaml  streams.py  telemetry.py  websocket.py
neosentinel/dashboard/: __init__.py  broadcaster.py  mock_feed.py  redis_adapter.py  server.py
neosentinel/report/: html.py  (+3 more)
scripts/: bootstrap-node.sh  demo.sh
tests/: conftest.py
(+110 files in other folders)
