[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neosentinel"
version = "0.1.0"
description = "Autonomous cluster healing for ARM Graviton inference workloads"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "NeoSentinel Team" }]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
]

[project.scripts]
neosentinel = "neosentinel.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["neosentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
